<resources>
    <string name="app_name">SpotifyClone</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_premium">Premium</string>
    <string name="greetings_message">Good Morning</string>
    <string name="notifications_image_description">notifications image description</string>
    <string name="history_image_description">History Image Description</string>
    <string name="settings_image_description">Settings Image Description</string>
    <string name="your_shows">Your Shows</string>
    <string name="stay_with_justin_beiber">Stay (with Justin Beiber)</string>
</resources>